# pomodoro-pro

./: .gitignore  pomodoro-pro.html  pomodoro_timer.py
pomodoro/: index.html  package-lock.json  package.json
pomodoro/src/: App.tsx  index.css
pomodoro/src-tauri/: Cargo.toml  tauri.conf.json
pomodoro/src-tauri/src/: main.rs
style-transfer/: app.py  requirements.txt
style-transfer/templates/: index.html
